# mealie_translate

./: .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  .trivyignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.example.yml  docker-compose.ollama.yml.example  docker-compose.openai.yml.example  docker-compose.override.yml.example  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt
.cursor/skills/deployment/: SKILL.md
.cursor/skills/use-makefile/: SKILL.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  copilot-instructions.md  dependabot.yml  pull_request_template.md  security.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.md  documentation.yml  feature_request.yml  question.yml
.github/codeql/: codeql-config.yml
.github/scripts/: README.md  filter_sarif.py
.github/skills/add-dependencies/: SKILL.md
.github/skills/cleanup/: SKILL.md
.github/skills/deployment/: SKILL.md
.github/skills/python-venv/: SKILL.md
.github/skills/recipe-taxonomy/: SKILL.md
.github/skills/refactor/: SKILL.md
.github/skills/semantic-commits/: SKILL.md
.github/skills/use-makefile/: SKILL.md
.github/skills/write-documentation/: SKILL.md
.github/skills/write-tests/: SKILL.md
.github/workflows/: _docker-build.yml  cd.yml  ci.yml  dependabot.yml  maintenance.yml  pr-image-cleanup.yml  security.yml
docs/: ARTIFACTS.md  CI_CD_ARCHITECTURE.md  DEVELOPMENT.md  DOCKER.md  DOCKER_IMAGE_STRATEGY.md  README.md  SECURITY_ARCHITECTURE.md  TAXONOMY.md
mealie_translate/: __init__.py  config.py  diff_utils.py  logger.py  main.py  mealie_client.py  ollama_translator.py  openai_translator.py  organizer.py  recipe_processor.py  translator.py  translator_factory.py  translator_interface.py  unit_converter.py
scripts/: docker-entrypoint.sh
tests/: __init__.py  test_comprehensive.py  test_config.py  test_dry_run.py  test_integration.py  test_logger.py  test_main.py  test_mealie_client.py  test_ollama_config.py  test_ollama_translator.py  test_openai_config.py  test_openai_translator.py  test_organizer.py  test_recipe_processor.py  test_translator.py  test_translator_factory.py  test_unit_converter.py
tools/: README.md  __init__.py  _model_comparison_data.py  basic_model_comparison.py  detailed_model_comparison.py  generate_tags.py  verify_prompt_consistency.py
